--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     <a href="">reserva <span></span></a>
     <a href="">financiamento <span></span></a>
 </div>
-<div id="upper3">a</div>
+<div id="upper3">
+
+    <div><span id="lgn" onclick="changelg()">linguagem</span> <span id="linguagemslct" style="background-image:url(Flag_of_Brazil.svg.webp); background-position: center; background-size: cover;"></span></div>
+    <div><span onclick="darkmode()" id="darkmd"><span id="balldm"></span></span></div>
+
+</div>
     </div>
 
 
@@ -48,19 +53,38 @@
                 <p id="carroshow">
                 </p>
                 <div id="descricaoshow">
-                    <td>a</td>
-                    <td>a</td>
+                    <div style="border: solid rgb(255, 232, 206) 1px; width: 100%; border-radius: 3px;">
+                   <span id="sp1" style="width: 20%;">
+                    <li>Nome</li>
+                    <li>Marca</li>
+                    <li>Cor</li>
+                    <li>Preço</li>
+                    <li>Fabricante</li>
+                    <li>Tipo</li>
+                    <li>Combustivel</li>
+                   </span>
+                   <span style="width: 80%;">
+                    <li>Nome</li>
+                    <li>Marca</li>
+                    <li>Cor</li>
+                    <li>Preço</li>
+                    <li>Fabricante</li>
+                    <li>Tipo</li>
+                    <li>Combustivel</li>
+                   </span>
+                </div>
                 </div>
             </div>
             <div id="sch1"> <a style="margin-left: 0;">todos</a> <a>novos</a> <a>usados</a> </div>
             <div id="sch2">
-                <span id="searchbar"><input style="width: 90%; height: 4vh;" type="text" id="carpesquisa" placeholder="pesquise um carro pelo nome"><i class="fa-solid fa-magnifying-glass-plus" style="position: relative;" id="lupa"><i class="fa-solid fa-magnifying-glass" style="position: absolute;"></i></i></span>
+                <span id="searchbar"><input autocomplete="off" oninput="found()" style="width: 90%; height: 4vh; background-color: rgb(255, 255, 255);" type="text" id="carpesquisa" placeholder="pesquise um carro pelo nome"><i class="fa-solid fa-magnifying-glass" style="position: relative;" id="lupa"></i></span>
             </div>
         </div>
     </div>
 
     <div id="bottonbar">
-
-    </div><i class=></i>
+        Um site que faz acontecer
+    </div>
 </body>
 </html>
+
