--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="logo" src="1000018033.png"> <p style="font-family: 'Quicksand', sans-serif"> incenza</p></img>
         </div>
 <div id="upper2">
-    <a href="">estoque <span></span></a>
+    <a href="html.html">estoque <span></span></a>
     <a href="">catálogo <span></span></a>
     <a href="">reserva <span></span></a>
     <a href="">financiamento <span></span></a>
@@ -87,4 +87,5 @@
     </div>
 </body>
 </html>
+
 
