--- a/inicio.html
+++ b/inicio.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bakbak+One&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Quicksand:wght@300..700&family=Staatliches&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/619d5231f4.js" crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">   
-    <script src="java.js"></script>
+    <script src="inicio.js"></script>
     <link rel="stylesheet" href="css.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
         <img id="logo" src="1000018033.png"> <p style="font-family: 'Quicksand', sans-serif"> incenza</p></img>
         </div>
 <div id="upper2">
-    <a href="html.html">estoque <span></span></a>
+    <a href="estoque.html">estoque <span></span></a>
     <a href="">catálogo <span></span></a>
     <a href="">reserva <span></span></a>
     <a href="">financiamento <span></span></a>
@@ -87,5 +87,6 @@
     </div>
 </body>
 </html>
+
 
 
